[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/town/House.png" type="Texture" id=1]
[ext_resource path="res://tiles/shitsquare.png" type="Texture" id=2]
[ext_resource path="res://Sprites/town/house_generic.gd" type="Script" id=3]
[ext_resource path="res://tiles/Artboard_1.png" type="Texture" id=4]
[ext_resource path="res://tiles/Blacksmith.png" type="Texture" id=5]
[ext_resource path="res://shaders/JitterFreePixelArt.tres" type="Material" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 544, 320 )

[node name="house_generic" type="Node2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 3 )

[node name="generic" type="Node2D" parent="."]
visible = false

[node name="shadow" type="Sprite" parent="generic"]
modulate = Color( 0, 0, 0, 0.341176 )
position = Vector2( 0, 256 )
scale = Vector2( 8, 4 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="generic"]
material = ExtResource( 6 )
texture = ExtResource( 1 )

[node name="collision" type="StaticBody2D" parent="generic"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="generic/collision"]
position = Vector2( 0, 192 )
shape = SubResource( 1 )
disabled = true

[node name="potion" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -72 )

[node name="shadow" type="Sprite" parent="potion"]
modulate = Color( 0, 0, 0, 0.341176 )
position = Vector2( -2.67029e-05, 256 )
scale = Vector2( 9.5, 6 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="potion"]
material = ExtResource( 6 )
texture = ExtResource( 4 )

[node name="collision" type="StaticBody2D" parent="potion"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="potion/collision"]
position = Vector2( 0, 256 )
shape = SubResource( 1 )
disabled = true

[node name="blacksmith" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 40 )

[node name="shadow" type="Sprite" parent="blacksmith"]
modulate = Color( 0, 0, 0, 0.341176 )
position = Vector2( -1.14441e-05, 192 )
scale = Vector2( 8.41406, 4.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="blacksmith"]
material = ExtResource( 6 )
texture = ExtResource( 5 )

[node name="collision" type="StaticBody2D" parent="blacksmith"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="blacksmith/collision"]
position = Vector2( 0, 160 )
shape = SubResource( 1 )
disabled = true

[node name="pos1" type="Position2D" parent="."]
position = Vector2( -352, 608 )

[node name="pos2" type="Position2D" parent="."]
position = Vector2( 320, 640 )

[node name="pos3" type="Position2D" parent="."]
position = Vector2( -32, 576 )
